# weather-rain-prediction-app

./: .dockerignore  .gitignore  Dockerfile  application.py  kubernetes-deployment.yaml  pyproject.toml
.github/workflows/: deploy.yml
pipeline/: training_pipeline.py
src/: data_processing.py  model_training.py
static/: styles.css
templates/: index.html
