[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "WeatherRain-Prediction"
version = "0.1"
authors = [
    { name = "Aman" }
]
dependencies = [
    "pandas",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "scikit-learn",
    "xgboost",
]
deploy = [
    "Flask"
]

[tool.setuptools.packages.find]
where = ["."]